--- a/Main/cover.tex
+++ b/Main/cover.tex
@@ -110,25 +110,16 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-It is my pleasure to submit my resume for Web and Database Developer. I am a physics graduate from UH Mānoa and
-a self-taught web-developer eager to use my four years of programming experience to support the improvement of public education in
-the state of Hawai‘i.
+It is my pleasure to submit my resume for the Web and Database Developer position. I am a physics major graduate from University of Hawaii at Manoa (UHM). Due to my interest to computer science I have been engage in learning and implementing computer programming in last four years.
 
-I first learned computer programming and web development in high school. In my freshman and sophomore years in
-UHM, I worked in a bioinformatics lab as an assistant analyst. During that time, It was my privilege to design and maintain
-a MySQL database of genetic elements and to create a public front end for it using PHP programming language on an
-Apache web server. More recently, I completed an online degree on Udacity.com focused on Front-End web development
-using HTML5, CSS3, and JavaScript. I was also introduced to techniques of website optimization. I have made some of my
-projects available on my personal portfolio website at \href{http://tahahojati.github.io}{tahahojati.github.io}.
-%In college, I experienced both sides of education. I tutored physics for one summer where I learned that students have widely different capacities for learning and that they are comfortable with different methods of teaching. This makes online education an immeasurably valuable asset since students could progress at their own pace and optional material could be provided for students who need more help. I have participated in online classes in both UH and non-UH platforms.
+I first learned computer programming, C++, and web development in high school.  In my freshman and sophomore years in UHM, I worked in a bioinformatics lab as an assistant analyst. During that time, my responsibility was to design and maintain a MySQL database of genetic elements and to create a public front end for it using PHP programming language on an Apache web server. As part of my education at UHM, I took courses in Java Programing, Algorithm Analysis, and Discreet Mathematics from Computer Science Department at UHM.  Last April, I completed an online degree on Udacity.com focused on Front-End web development using HTML5, CSS3, and JavaScript. As part of this program, I was also introduced to techniques of website optimization. I have made some of my projects available on my personal portfolio website at tahahojati.github.io.
 
-The prospect of using my self-taught skills in order to help the students and researchers in the state of Hawai‘i excites me.
-I hope to use my time as a web developer to hone my skills
-% especially in my areas of weakness such as user authentication 
-and I hope to meet educators who will inspire me to work harder and to contribute more to the academia
-and the state of Hawai‘i.
 
 Thank you in advance for your consideration.
+
+
+Sincerely,
+
 
 \end{cvletter}
 
