minor resume fixes

--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -9,12 +9,11 @@
 	{Designed a science education database schema using MySQL. Developed a server-side web application using Zend Framework, Angular.js, and Apache2.}
 	
 	\cventry
-	{CALUCATOR (under active development)
-	}
+	{AASHTO LRFD DESIGN Online Software (under active development)	}
 	{}
 	{}
 	{}
-	{A website with the purpose of facilitating creation of formal civil engineering reports.  The website is being developed using Zend Framework. }
+	{A website with the purpose of structural engineering design using an online software. The website is being developed using Zend Framework. }
 
 	\cventry
 	{Ristorante con Fusion
