--- a/Main/resume/skills.tex
+++ b/Main/resume/skills.tex
@@ -2,18 +2,18 @@
 \begin{cvskills}
   \cvskill
     {Programming}
-    {JavaScript, PHP, HTML, CSS}
+    {PHP, Java, C/C++, JavaScript, Ruby, Python, Perl, HTML, CSS}
   \cvskill
   {Frameworks}
-  {Zend Framework 1, Angular.js, Bootstrap, Knockout.js, Jasmine}  
+  {Zend Framework 1, Ruby on Rails, ExpressJs, AngularJs, Bootstrap, KnockoutJs, Jasmine}  
   \cvskill
   {IDEs}
-  {Adobe Dreamweaver, PHP Storm, Eclipse IDE}  
-  \cvskill
-  {Version Control}
-  {Git \& Github}  
+  {Adobe Dreamweaver, PHP Storm, Eclipse IDE, Android Studio}  
+%  \cvskill
+ % {Version Control}
+  %{Git \& Github}  
   \cvskill
   {Softwares \& Databases}
-  {Apache, MySQL, PostgreSQL, phpMyAdmin}      
+  {Apache, Rack, MySQL, PostgreSQL, phpMyAdmin}      
     
 \end{cvskills}
