more minor fixes

--- a/Main/resume/skills.tex
+++ b/Main/resume/skills.tex
@@ -5,10 +5,10 @@
     {PHP, Java, C/C++, JavaScript, Ruby, Python, Perl, HTML, CSS}
   \cvskill
   {Frameworks}
-  {Zend Framework 1, Ruby on Rails, ExpressJs, AngularJs, Bootstrap, KnockoutJs, Jasmine}  
+  {Zend Framework 1, Ruby on Rails, ExpressJs, AngularJs, Ionic, Bootstrap, KnockoutJs}  
   \cvskill
-  {IDEs}
-  {Adobe Dreamweaver, PHP Storm, Eclipse IDE, Android Studio}  
+  {IDEs \& Development Tools}
+  {Adobe Dreamweaver, PHP Storm, Eclipse IDE, Gulp, Jasmin, PHPUnit, RSpec, Cucumber}  
 %  \cvskill
  % {Version Control}
   %{Git \& Github}  
