changed four to five

--- a/Main/resume/skills.tex
+++ b/Main/resume/skills.tex
@@ -8,7 +8,7 @@
   {Zend Framework 1, Ruby on Rails, ExpressJs, AngularJs, Ionic, Bootstrap, KnockoutJs}  
   \cvskill
   {IDEs \& Development Tools}
-  {Adobe Dreamweaver, PHP Storm, Eclipse IDE, Gulp, Jasmin, PHPUnit, RSpec, Cucumber}  
+  {Adobe Dreamweaver, PHP Storm, Eclipse IDE, Git, Gulp, Jasmin, PHPUnit, RSpec, Cucumber}  
 %  \cvskill
  % {Version Control}
   %{Git \& Github}  
