After applying for RCUH Cancer Center.

--- a/Saeid/cover.tex
+++ b/Saeid/cover.tex
@@ -66,7 +66,7 @@
 % \reddit{reddit-id}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+%\quote{``Be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
@@ -75,14 +75,15 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {College of Education: Curriculum Research \& Development Group}
-  {1776 UNIVERSITY AVE.\\ HONOLULU, HI 96822}
+  {University of Hawaii Cancer Center}
+  {     
+  	 }
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Web and Database Developer}
+\lettertitle{Job Application for Software Engineer}
 % How the letter is opened
-\letteropening{Dear Ms. Ching,}
+\letteropening{Dear Mr. Okiyama,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -110,15 +111,11 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-It is my pleasure to submit my resume for the Web and Database Developer position. I am a physics major graduate from University of Hawaii at Manoa (UHM). Due to my interest to computer science I have been engage in learning and implementing computer programming in last four years.
+It is my pleasure to submit my resume for the advertised software engineer position. I recently graduated from the University of Hawaii at Manoa (UHM) with a bachelor’s of science in physics. Due to my interest to computer science, I have engaged in learning and implementing computer programming in the last four years.
 
-I first learned computer programming, C++, and web development in high school.  In my freshman and sophomore years in UHM, I worked in a bioinformatics lab as an assistant analyst. During that time, my responsibility was to design and maintain a MySQL database of genetic elements and to create a public front end for it using PHP programming language on an Apache web server. As part of my education at UHM, I took courses in Java Programing, Algorithm Analysis, and Discreet Mathematics from Computer Science Department at UHM.  Last April, I completed an online degree on Udacity.com focused on Front-End web development using HTML5, CSS3, and JavaScript. As part of this program, I was also introduced to techniques of website optimization. I have made some of my projects available on my personal portfolio website at tahahojati.github.io.
+I first learned computer programming, C++, and web development in high school.  In my freshman and sophomore years at UHM, I worked in a bioinformatics lab as an assistant analyst. During that time, my responsibility was to design and maintain a MySQL database of genetic elements and to create a public front end for it using PHP programming language on an Apache web server. As part of my education at UHM, I took courses in Java Programing, Algorithm Analysis, and Discreet Mathematics from Computer Science Department at UHM.  Last April, I completed an online degree on Udacity.com focused on Front-End web development using HTML5, CSS3, and JavaScript. As part of this program, I was also introduced to techniques of website optimization.  Currently I work as an application developer for CRDG office at UH Manoa where I have developed a database backed web application for a citizen science project.  I have provided links to some of my projects on my personal portfolio website at: tahahojati.github.io.
 
-
-Thank you in advance for your consideration.
-
-
-Sincerely,
+I am passionate about writing beautiful and bug free code and I believe I would be great addition to your group. 
 
 
 \end{cvletter}
