--- a/Saeid/resume.tex
+++ b/Saeid/resume.tex
@@ -83,7 +83,7 @@
 %%Summary
 \cvsection{Summary}
 
-Recent university graduate with experience in programming and web and database design. In possession of strong written communication skills and ability to establish interpersonal relationships with teams and clients. The links to some of my projects (listed in this document) are present on my portfolio page at \href{http://tahahojati.github.io}{tahahojati.github.io}.  %In pursuit of exciting career in web and mobile development industry.
+Recent university graduate with experience in programming and web and database design. Experienced with several development frameworks and always eager to learn more. The links to some of my projects (listed in this document) are present on my portfolio page at \mbox{\href{http://tahahojati.github.io}{tahahojati.github.io}}.  %In pursuit of exciting career in web and mobile development industry.
 %%End Summary
 
 
