--- a/Saeid/resume/experience.tex
+++ b/Saeid/resume/experience.tex
@@ -10,6 +10,26 @@
 			\item {Software developer for the OPIHI project.}
 		\end{cvitems}
 	}
+    \cventry
+    {Web Developer}
+    {Hasti LLC}
+    {Honolulu, HI}
+    {June 2016 - present}
+    {
+        \begin{cvitems}
+            \item {Software developer for the AASHTO LRFD project.}
+        \end{cvitems}
+    }
+    \cventry
+    {IT Assistant}
+    {Kai Hawaii Structural and Forensic Engineers}
+    {Honolulu, HI}
+    {September 2016 - present}
+    {
+	    \begin{cvitems}
+		    \item{Provide general technical assistance to engineers. Perform regular server maintenance duties.}	
+	    \end{cvitems}	
+    }
 	
 	\cventry
 	{Physics Tutor}
