--- a/Saeid/resume/projects.tex
+++ b/Saeid/resume/projects.tex
@@ -13,7 +13,7 @@
 	{}
 	{}
 	{}
-	{A website with the purpose of structural engineering design using an online software. The website is being developed using Zend Framework. }
+	{Online software for facilitating structural engineering design. The website is developed using MEAN framework. A link is available on my online portfolio. }
 
 	\cventry
 	{Ristorante con Fusion
