--- a/Saeid/resume/skills.tex
+++ b/Saeid/resume/skills.tex
@@ -2,10 +2,10 @@
 \begin{cvskills}
   \cvskill
     {Programming}
-    {PHP, Java, C/C++, JavaScript, Ruby, Python, Perl, HTML, CSS}
+    {PHP, Java, C/C++, JavaScript, Ruby, Python, HTML, CSS}
   \cvskill
   {Frameworks}
-  {Zend Framework 1, Ruby on Rails, ExpressJs, AngularJs, Ionic, Bootstrap, KnockoutJs}  
+  {Zend Framework, Ruby on Rails, ExpressJS, AngularJS, Ionic, Bootstrap, KnockoutJS, D3JS, jQuery}  
   \cvskill
   {IDEs \& Development Tools}
   {Adobe Dreamweaver, PHP Storm, Eclipse IDE, Git, Gulp, Jasmin, PHPUnit, RSpec, Cucumber}  
@@ -14,6 +14,6 @@
   %{Git \& Github}  
   \cvskill
   {Softwares \& Databases}
-  {Apache, Rack, MySQL, PostgreSQL, phpMyAdmin}      
+  {Apache, Rack, MySQL, PostgreSQL, MongoDB}      
     
 \end{cvskills}
