--- a/Saeid/resume/education.tex
+++ b/Saeid/resume/education.tex
@@ -1,26 +1,31 @@
 \cvsection{Education}
 \begin{cventries}
-	 \cventry
-	 {Diploma with Honors}
-	 {Henry J. Kaiser High school}
-	 {Honolulu, HI}
-	 {2010 - 2011}
-	 {}
-  \cventry
-    {B.S. in Physics}
-    {University of Hawai`i at M{\char"101}noa}
-    {Honolulu, HI}
-    {2011 - 2016}
-    {
-      \begin{cvitems}
-        \item {Membership in the Society of Physics Students and the Golden Key Honor Society.}
-      \end{cvitems}
-    }
-    
-  \cventry
-  {Nanodegree in Front-End Development}
-  {Udacity.com}
-  {Honolulu, HI}
-  {2016}
-  {}    
+	\cventry
+	{Diploma with Honors}
+	{Henry J. Kaiser High school}
+	{Honolulu, HI}
+	{2010 - 2011}
+	{}
+	\cventry
+	{B.S. in Physics}
+	{University of Hawai`i at M{\char"101}noa}
+	{Honolulu, HI}
+	{2011 - 2016}
+	{
+	  \begin{cvitems}
+	    \item {Membership in the Society of Physics Students and the Golden Key Honor Society.}
+	  \end{cvitems}
+	}
+	\cventry
+	{Nanodegree in Front-End Development}
+	{Udacity.com}
+	{Honolulu, HI}
+	{2016}
+	{}  
+	\cventry
+	{Certificate in Full Stack Development from the Hong Kong University of Science and Technology}
+	{Coursera.com}
+	{Honolulu, HI}
+	{2016}
+	{}  
 \end{cventries}
