applied for google

--- a/Main/resume.tex
+++ b/Main/resume.tex
@@ -54,7 +54,7 @@
 %     Personal Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Essentials
-\name{Taha }{Pourjalalli}
+\name{Taha }{Pourjalali}
 %\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 22738, Rep. of KOREA}
 \mobile{(808)232-8467} 
 %%% Social
@@ -63,7 +63,7 @@
 \github{tahahojati}
 \linkedin{taha-pourjalali-2a2600b8}
 %%% Optionals
-\position{Programmer {\enskip\cdotp\enskip}Web and Database Developer}
+\position{Programmer {\enskip\cdotp\enskip}Application Developer}
 %\quote{``Make the change that you want to see in the world."}
 
 
@@ -83,7 +83,7 @@
 %%Summary
 \cvsection{Summary}
 
-Recent university graduate with five years of experience in programming and web and database design. In possession of strong written communication skills and ability to establish interpersonal relationships with teams and clients. The links to some of my projects (listed in this document) are present on my portfolio page at \href{http://tahahojati.github.io}{tahahojati.github.io}.  %In pursuit of exciting career in web and mobile development industry.
+Recent university graduate with experience in programming and web and database design. Experienced with several development frameworks and always eager to learn more. The links to my projects are present on my portfolio page at \mbox{\href{http://tahahojati.github.io}{tahahojati.github.io}}.  %In pursuit of exciting career in web and mobile development industry.
 %%End Summary
 
 
