--- a/Main/resume/experience.tex
+++ b/Main/resume/experience.tex
@@ -2,7 +2,7 @@
 \begin{cventries}
 	\cventry
 	{Web and Database Developer}
-	{Curriculum Research and Development Group at UH Manoa}
+	{Curriculum Research and Development Group at University of Hawai`i at M{\char"101}noa}
 	{Honolulu, HI}
 	{Apr 2016 - present}
 	{
@@ -10,10 +10,30 @@
 			\item {Software developer for the OPIHI project.}
 		\end{cvitems}
 	}
+    \cventry
+    {Web Developer}
+    {Hasti LLC}
+    {Honolulu, HI}
+    {June 2016 - present}
+    {
+        \begin{cvitems}
+            \item {Software developer for the AASHTO LRFD project.}
+        \end{cvitems}
+    }
+    \cventry
+    {IT Support}
+    {Kai Hawaii Structural and Forensic Engineers}
+    {Honolulu, HI}
+    {September 2016 - present}
+    {
+	    \begin{cvitems}
+		    \item{Provide general technical assistance to engineers. Perform regular server maintenance duties.}	
+	    \end{cvitems}	
+    }
 	
 	\cventry
 	{Physics Tutor}
-	{University of Hawaii at Manoa}
+	{University of Hawai`i at M{\char"101}noa}
 	{Honolulu, HI}
 	{2014}
 	{
@@ -22,9 +42,19 @@
 			%\item {Helped eight struggling students improve their grades and pass the class.}
 		\end{cvitems}
 	}
-	
 	\cventry
-	{Department of Molecular Biosciences and Bioengineering at UH Manoa}
+	{Directed Studies Under Dr. Vahsen}
+	{Department of Physics University of Hawai`i at M{\char"101}noa}
+	{Honolulu, HI}
+	{2013}
+	{
+		\begin{cvitems}
+			\item {Devised an app with graphical user interface to select, display, and graph neutron trajectories identified by a neutron detector using C++ and
+				ROOT under the guidance of Dr. Sven Vahsen.}
+		\end{cvitems}
+	}
+	\cventry
+	{Department of Molecular Biosciences and Bioengineering at University of Hawai`i at M{\char"101}noa}
 	{Undergraduate Research Assistant}
 	{Honolulu, HI}
 	{2011-2013}
@@ -36,3 +66,4 @@
 		\end{cvitems}
 	}
 \end{cventries}
+
