--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -9,11 +9,11 @@
 	{Designed a science education database schema using MySQL. Developed a server-side web application using Zend Framework, Angular.js, and Apache2.}
 	
 	\cventry
-	{AASHTO LRFD DESIGN Online Software (under active development)	}
+	{AASHTO LRFD DESIGN Online Software}
 	{}
 	{}
 	{}
-	{A website with the purpose of structural engineering design using an online software. The website is being developed using Zend Framework. }
+	{Online software for facilitating structural engineering design. The website is developed using MEAN framework. A link is available on my online portfolio. }
 
 	\cventry
 	{Ristorante con Fusion
