--- a/Main/resume/skills.tex
+++ b/Main/resume/skills.tex
@@ -2,18 +2,18 @@
 \begin{cvskills}
   \cvskill
     {Programming}
-    {PHP, Java, C/C++, JavaScript, Ruby, Python, Perl, HTML, CSS}
+    {PHP, JavaScript, Java, C/C++,  Ruby, Python, Perl, HTML, CSS}
   \cvskill
-  {Frameworks}
-  {Zend Framework 1, Ruby on Rails, ExpressJs, AngularJs, Ionic, Bootstrap, KnockoutJs}  
+  {Frameworks \& Libraries}
+  {Zend Framework, Ruby on Rails, ExpressJS, AngularJS, Ionic, Bootstrap, KnockoutJS, D3JS, jQuery}  
   \cvskill
   {IDEs \& Development Tools}
-  {Adobe Dreamweaver, PHP Storm, Eclipse IDE, Git, Gulp, Jasmin, PHPUnit, RSpec, Cucumber}  
+  {Adobe Dreamweaver, PHP Storm, Eclipse IDE, Git, Grunt, Jasmin, PHPUnit, RSpec, Cucumber}  
 %  \cvskill
  % {Version Control}
   %{Git \& Github}  
   \cvskill
   {Softwares \& Databases}
-  {Apache, Rack, MySQL, PostgreSQL, phpMyAdmin}      
+  {Apache, Rack, MySQL, PostgreSQL, MongoDB}      
     
 \end{cvskills}
