Changed main cover

--- a/Main/cover.tex
+++ b/Main/cover.tex
@@ -120,6 +120,16 @@ Thank you in advance for your consideration.
 
 Sincerely,
 
+Dear Sir / Madam,
+
+Let me start by saying that I love Google and that just writing this letter excites me.   I get inspired by Google products everyday.  I was inspired by the extremely neat implementation of dependency injection in Angular and after years, I am still in awe of Google Sheets and how your company developed such a strong software using only JavaScript (as it was in 2007). 
+I am physics graduate from the University of Hawaii.  I have not always been a developer, but I have loved programming for a long time.  I taught my self C++ from a book before graduating from high school.  In my freshman and sophomore years in UHM, I worked in a bioinformatics lab as an assistant research assistant. During that time, my responsibility was to design and maintain a MySQL database of genetic elements and to create a public front end for it using php on an Apache web server.  During my college education, I took online and on campus classes in algorithm design and analysis, machine learning, and full stack development.  Since graduating last May, I have focused on learning and adopting new development technologies including Mean stack development, Zend Framework for php and even some Ruby on Rails.   I have made some of my projects available on my portfolio at tahahojati.github.io.  If you would like to see the code for a project that is not available on Github, please contact me.  
+
+Thank you for considering my application.
+
+Sincerely,
+
+Taha Pourjalali
 
 \end{cvletter}
 
