--- a/Main/resume.tex
+++ b/Main/resume.tex
@@ -81,17 +81,17 @@
 \makecvheader
 
 %%Summary
-\cvsection{Summary}
+%\cvsection{Summary}
 
-Recent university graduate with experience in programming and web and database design. Experienced with several development frameworks and always eager to learn more. The links to my projects are present on my portfolio page at \mbox{\href{http://tahahojati.github.io}{tahahojati.github.io}}.  %In pursuit of exciting career in web and mobile development industry.
+%Recent university graduate with experience in programming and web and database design. Experienced with several development frameworks and always eager to learn more. The links to my projects are present on my portfolio page at \mbox{\href{http://tahahojati.github.io}{tahahojati.github.io}}.  %In pursuit of exciting career in web and mobile development industry.
 %%End Summary
 
 
 %%% Import contents
-\import{\sectiondir}{education.tex}
 \import{\sectiondir}{skills.tex}
 \import{\sectiondir}{projects.tex}
 \import{\sectiondir}{experience.tex}
+\import{\sectiondir}{education.tex}
 %\import{\sectiondir}{extracurricular.tex}
 %\import{\sectiondir}{honors.tex}
 %\import{\sectiondir}{presentation.tex}
