--- a/Main/resume/experience.tex
+++ b/Main/resume/experience.tex
@@ -1,5 +1,17 @@
 \cvsection{Experience}
 \begin{cventries}
+   	\cventry
+    {Programmer Analyst}
+    {First Hawaiian Bank}
+    {Honolulu, HI}
+    {Nov 2016 - present}
+    {
+        \begin{cvitems}
+            \item {Maintained and extended a complex legacy application used by bank tellers, paying attention to quality assurance of released code}
+            \item {Successfully collaborated with a sizable IT team to deliver a major project}
+            \item {Fixed a growing queue of unresolved bugs, some over four years old}
+        \end{cvitems}
+    }
 	\cventry
 	{Web and Database Developer}
 	{Curriculum Research and Development Group at University of Hawai`i at M{\char"101}noa}
@@ -14,7 +26,7 @@
     {Web Developer}
     {Hasti LLC}
     {Honolulu, HI}
-    {June 2016 - present}
+    {June 2016 - Nov 2016}
     {
         \begin{cvitems}
             \item {Software developer for the AASHTO LRFD project.}
@@ -24,7 +36,7 @@
     {IT Support}
     {Kai Hawaii Structural and Forensic Engineers}
     {Honolulu, HI}
-    {September 2016 - present}
+    {September 2016 - Nov 2016}
     {
 	    \begin{cvitems}
 		    \item{Provide general technical assistance to engineers. Perform regular server maintenance duties.}	
