--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -1,12 +1,13 @@
 \cvsection{Projects}
-\begin{cventries}
 
+	Find links and more detailed description of my projects on my online portfolio at \mbox{\href{http://tahahojati.github.io}{tahahojati.github.io}}.
+\begin{cventries}
 	\cventry
-	{OPIHI: Our Project in Hawaii's Intertidal (under active development)}
+	{OPIHI: Our Project in Hawaii's Intertidal}
 	{}
 	{}
 	{}
-	{Designed a science education database schema using MySQL. Developed a server-side web application using Zend Framework, Angular.js, and Apache2.}
+	{Designed a science education database schema using MySQL. Developed a server-side web application using Zend Framework, D3, and Apache2.}
 	
 	\cventry
 	{AASHTO LRFD DESIGN Online Software}
