--- a/Main/resume/skills.tex
+++ b/Main/resume/skills.tex
@@ -5,15 +5,15 @@
     {PHP, JavaScript, Java, C/C++,  Ruby, Python, Perl, HTML, CSS}
   \cvskill
   {Frameworks \& Libraries}
-  {Zend Framework, Ruby on Rails, ExpressJS, AngularJS, Ionic, Bootstrap, KnockoutJS, D3JS, jQuery}  
-  \cvskill
-  {IDEs \& Development Tools}
-  {Adobe Dreamweaver, PHP Storm, Eclipse IDE, Git, Grunt, Jasmin, PHPUnit, RSpec, Cucumber}  
+  {Zend Framework, Ruby on Rails, Express, Angular1, Ionic, Bootstrap, Knockout, D3, jQuery}  
+  %\cvskill
+  %{IDEs \& Development Tools}
+  %{Adobe Dreamweaver, PHP Storm, Eclipse IDE, Git, Grunt, Jasmin, PHPUnit, RSpec, Cucumber}  
 %  \cvskill
  % {Version Control}
   %{Git \& Github}  
   \cvskill
   {Softwares \& Databases}
-  {Apache, Rack, MySQL, PostgreSQL, MongoDB}      
+  {Apache, MySQL, PostgreSQL, MongoDB}      
     
 \end{cvskills}
