updated main resume, honors section, projects, experience

--- a/Main/resume.tex
+++ b/Main/resume.tex
@@ -56,9 +56,9 @@
 %%% Essentials
 \name{Taha }{Pourjalali}
 %\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 22738, Rep. of KOREA}
-\mobile{(808)232-8467} 
+\mobile{(808) 232-8467} 
 %%% Social
-\email{Taha@hawaii.edu}
+\email{tpourjalali@gmail.com}
 \homepage{tahahojati.github.io}
 \github{tahahojati}
 \linkedin{taha-pourjalali-2a2600b8}
@@ -91,6 +91,7 @@
 \import{\sectiondir}{skills.tex}
 \import{\sectiondir}{projects.tex}
 \import{\sectiondir}{experience.tex}
+\import{\sectiondir}{honors.tex}
 \import{\sectiondir}{education.tex}
 %\import{\sectiondir}{extracurricular.tex}
 %\import{\sectiondir}{honors.tex}
