--- a/Main/resume/experience.tex
+++ b/Main/resume/experience.tex
@@ -7,9 +7,11 @@
     {Nov 2016 - present}
     {
         \begin{cvitems}
-            \item {Maintained and extended a complex legacy application used by bank tellers, paying attention to quality assurance of released code}
-            \item {Successfully collaborated with a sizable IT team to deliver a major project}
-            \item {Fixed a growing queue of unresolved bugs, some over four years old}
+            \item {Maintained and extended a complex legacy application used by bank tellers, paying attention to quality assurance of released code.}
+            \item {Resolved various production issues/bugs in a timely manner, maintaining a high satisfaction score.}
+            \item {Maintained numerous servers using Python, Perl and Batch scripts.}
+            \item {Successfully collaborated with a sizable IT team to deliver a major project.}
+            \item {Fixed a growing queue of unresolved bugs, some over four years old.}
         \end{cvitems}
     }
 	\cventry
@@ -19,7 +21,32 @@
 	{Apr 2016 - present}
 	{
 		\begin{cvitems}
-			\item {Software developer for the OPIHI project.}
+			\item {Designed and developed opihi.crdg.hawaii.edu from scratch using the Zend php framework, being mindful of best security practices and also accessibility of the website for handicap users.}
+			\item {Worked with non-technical clients to define software requirements and design the ideal look and feel for the website.}
+			\item {Used D3.js to create beautiful and responsive graphs for analyzing scientific data collected by students.}
+		\end{cvitems}
+	}
+	\cventry
+	{Website Administrator}
+	{First Unitarian Church of Hawaii}
+	{Honolulu, HI}
+	{Jan 2018 - present}
+	{
+	\begin{cvitems}
+		\item {This is volunteer position. I upkeep, troubleshoot, and extend the functionality of a wordpress based website for the First Unitarian Church of Hawaii.}
+	\end{cvitems}
+	}
+	\cventry
+	{Front End Developer}
+	{University of Hawai`i at M{\char"101}noa}
+	{Honolulu, HI}
+	{Oct 2016 - Mar 2017}
+	{
+		\begin{cvitems}
+			\item {Worked with Dr. Kaveh Abhari to create a vibrant data-analysis page for Stemd2.com (an educational website.)}
+			\item {Developed a preliminary front-end framework to include multiple data-enabled widgets on the page.}
+			\item {Reverse-engineered a sophisticated word-press plugin and wrote custom php code to extend its functionality.}
+			%\item {Helped eight struggling students improve their grades and pass the class.}
 		\end{cvitems}
 	}
     \cventry
@@ -39,21 +66,11 @@
     {September 2016 - Nov 2016}
     {
 	    \begin{cvitems}
-		    \item{Provide general technical assistance to engineers. Perform regular server maintenance duties.}	
+		    \item{Provide general technical assistance to engineers. Perform regular server maintenance duties.}
+		    \item{Worked to debug internal programs including Microsoft Outlook plug ins.}
 	    \end{cvitems}	
     }
 	
-	\cventry
-	{Physics Tutor}
-	{University of Hawai`i at M{\char"101}noa}
-	{Honolulu, HI}
-	{2014}
-	{
-		\begin{cvitems}
-			\item {Worked closely with students to deepen their knowledge of physics.}
-			%\item {Helped eight struggling students improve their grades and pass the class.}
-		\end{cvitems}
-	}
 	\cventry
 	{Directed Studies Under Dr. Vahsen}
 	{Department of Physics University of Hawai`i at M{\char"101}noa}
