--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -14,8 +14,14 @@
 	{}
 	{}
 	{}
-	{Online software for facilitating structural engineering design. The website is developed using MEAN framework. A link is available on my online portfolio. }
-
+	{Online software for facilitating structural engineering design. It can calculate the tension for steel beams used for building structures and create pdf reports. The website is developed using MEAN framework. Sign up and usage is free. A link is available on my online portfolio. }
+	\cventry
+	{Farm Akamai}
+	{}
+	{}
+	{}
+	{And android app for teaching methods and standards of farming to farmers who cannot understand English. I was the lead developer for the project. The project was the recipient of the second place award in the Hawaii Agriculture Hackathon (AgathonHI) in 2018.}
+	
 	\cventry
 	{Ristorante con Fusion
 	}
