--- a/Main/resume/skills.tex
+++ b/Main/resume/skills.tex
@@ -2,10 +2,10 @@
 \begin{cvskills}
   \cvskill
     {Programming}
-    {PHP, JavaScript, Java, C/C++,  Ruby, Python, Perl, HTML, CSS}
+    {PHP, JavaScript, Java, C/C++, Python}
   \cvskill
   {Frameworks \& Libraries}
-  {Zend Framework, Ruby on Rails, Express, Angular1, Ionic, Bootstrap, Knockout, D3, jQuery}  
+  {Zend Framework, Express, Angular1, Ionic, Bootstrap, D3, jQuery}  
   %\cvskill
   %{IDEs \& Development Tools}
   %{Adobe Dreamweaver, PHP Storm, Eclipse IDE, Git, Grunt, Jasmin, PHPUnit, RSpec, Cucumber}  
@@ -14,6 +14,6 @@
   %{Git \& Github}  
   \cvskill
   {Softwares \& Databases}
-  {Apache, MySQL, PostgreSQL, MongoDB}      
+  {Git, Apache, MySQL, PostgreSQL, MongoDB}      
     
 \end{cvskills}
