--- a/Main/resume/education.tex
+++ b/Main/resume/education.tex
@@ -11,6 +11,18 @@
 	  \end{cvitems}
 	}
 	\cventry
+	{Nanodegree in Android Development with Grow with Google Scholarship}
+	{Udacity.com}
+	{Honolulu, HI}
+	{2018 (Ongoing)}
+	{I was one of the recipients of the Grow with Google scholarship for Android Development curriculum on Udacity.com. The program will finish later in 2018.}  
+	\cventry
+	{Certificate in Full Stack Development from the Hong Kong University of Science and Technology}
+	{Coursera.com}
+	{Honolulu, HI}
+	{2016}
+	{}  
+	\cventry
 	{Nanodegree in Front-End Development}
 	{Udacity.com}
 	{Honolulu, HI}
