changes to main resume(more to come soon):
Added AT&T hackathon
Shortened project descriptions, but still need shorter
added fa icons to projects
changed portfolio website
changed skills
fixed some typos

--- a/Main/resume.tex
+++ b/Main/resume.tex
@@ -59,7 +59,7 @@
 \mobile{(808) 232-8467} 
 %%% Social
 \email{tpourjalali@gmail.com}
-\homepage{tahahojati.github.io}
+\homepage{www.tpourjalali.com}
 \github{tahahojati}
 \linkedin{taha-pourjalali-2a2600b8}
 %%% Optionals
