--- a/Main/resume/honors.tex
+++ b/Main/resume/honors.tex
@@ -1,11 +1,16 @@
 \cvsection{Honors \& Awards}
 %\cvsubsection{International}
 \begin{cvhonors}
-  \cvhonor
-    {2nd Place}
-    {Hawaii Agriculture Hackathon (Agathon)}
-    {Honolulu, HI}
-    {2018}
+	\cvhonor
+	    {2nd Place}
+	    {Hawaii Agriculture Hackathon (Agathon)}
+	    {Honolulu, HI}
+	    {2018}  
+	\cvhonor
+	    {Best IoT Project}
+	    {AT\&T Hackathon (Hawaii)}
+	    {Honolulu, HI}
+	    {2018}
 \end{cvhonors}
 
 %\cvsubsection{Domestic}
