--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -1,50 +1,52 @@
+%some fa icons to use: faAndroid faDesktop faBrowser faLaptop faMicrochip
 \cvsection{Projects}
 
-	Find links and more detailed description of my projects on my online portfolio at \mbox{\href{http://tahahojati.github.io}{tahahojati.github.io}}.
+	Find links and more detailed description of my projects on my online portfolio at \mbox{\href{http:/www.tpourjalali.com}{www.tpourjalali.com}}.
 \begin{cventries}
 	\cventry
-	{OPIHI: Our Project in Hawaii's Intertidal}
+	{\faLaptop \enspace OPIHI: Our Project in Hawaii's Intertidal}
 	{}
 	{}
 	{}
-	{Designed a science education database schema using MySQL. Developed a server-side web application using Zend Framework, D3, and Apache2.}
+	{A science education web application. Developed with Zend Framework and LAMP stack}
 	
 	\cventry
-	{AASHTO LRFD DESIGN Online Software}
+	{\faLaptop\enspace AASHTO LRFD DESIGN Online Software}
 	{}
 	{}
 	{}
-	{Online software for facilitating structural engineering design. It can calculate the tension for steel beams used for building structures and create pdf reports. The website is developed using MEAN framework. Sign up and usage is free. A link is available on my online portfolio. }
-	\cventry
-	{Farm Akamai}
-	{}
-	{}
-	{}
-	{And android app for teaching methods and standards of farming to farmers who cannot understand English. I was the lead developer for the project. The project was the recipient of the second place award in the Hawaii Agriculture Hackathon (AgathonHI) in 2018.}
+	{Online application for structural engineering design. It Can perform calculations and generate and store pdf reports. It was developed with Express and Angular. }
 	
 	\cventry
-	{Ristorante con Fusion
+	{\faAndroid\enspace Farm Akamai}
+	{}
+	{}
+	{}
+	{}
+	
+	\cventry
+	{\faAndroid \faLaptop\enspace Ristorante con Fusion
 	}
 	{}
 	{}
 	{}
-	{Developed a single page web application for a fictitious restaurant using Angular.js and Bootstrap.  Also created a hybrid mobile app for the restaurant using Ionic and Cordova.}
+	{A single page web application and a cloud-backed mobile app for a fictitious restaurant using Angular.js and Express. Hybrid mobile app was developed using Ionic.}
 
 	\cventry
-	{Coffee in Honolulu
+	{\faLaptop\enspace Coffee in Honolulu
 	}
 	{}
 	{}
 	{}
-	{Displayed a map of coffee shops in Honolulu using Knockout.js framework and Google Maps and FourSquare APIs.}
+	{A map of coffee shops in Honolulu developed using Knockout.js framework and Google Maps and FourSquare APIs.}
 
 	\cventry
-	{Frogger
+	{\faLaptop\enspace Frogger
 	}
 	{}
 	{}
 	{}
-	{Wrote a JavaScript version of the classic arcade game Frogger. Made extensive use of object oriented JavaScript.}
+	{A JavaScript version of the classic arcade game Frogger. Developed with pure vanilla JavaScript.}
 
 
 	% \cventry
