--- a/Main/resume/skills.tex
+++ b/Main/resume/skills.tex
@@ -2,10 +2,10 @@
 \begin{cvskills}
   \cvskill
     {Programming}
-    {PHP, JavaScript, Java, C/C++, Python}
+    {Android, Python, JavaScript, Java, C/C++, PHP}
   \cvskill
   {Frameworks \& Libraries}
-  {Zend Framework, Express, Angular1, Ionic, Bootstrap, D3, jQuery}  
+  {MEAN/Express, Vue, Angular, D3, Ionic, Zend Framework, Bootstrap}  
   %\cvskill
   %{IDEs \& Development Tools}
   %{Adobe Dreamweaver, PHP Storm, Eclipse IDE, Git, Grunt, Jasmin, PHPUnit, RSpec, Cucumber}  
@@ -13,7 +13,6 @@
  % {Version Control}
   %{Git \& Github}  
   \cvskill
-  {Softwares \& Databases}
-  {Git, Apache, MySQL, PostgreSQL, MongoDB}      
-    
+  {Software \& Systems}
+  {Firebase, Apache, Heroku, Digital Ocean, MySQL, MongoDB}      
 \end{cvskills}
