modified projects. Added new ones, removed some old ones and ordered them. Now I only need to add one line descriptions.

--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -3,6 +3,14 @@
 
 	Find links and more detailed description of my projects on my online portfolio at \mbox{\href{http:/www.tpourjalali.com}{www.tpourjalali.com}}.
 \begin{cventries}
+	
+	\cventry
+	{\faAndroid\enspace Online Developer Portfolio}
+	{}
+	{}
+	{}
+	{}
+	
 	\cventry
 	{\faLaptop \enspace OPIHI: Our Project in Hawaii's Intertidal}
 	{}
@@ -15,10 +23,67 @@
 	{}
 	{}
 	{}
-	{Online application for structural engineering design. It Can perform calculations and generate and store pdf reports. It was developed with Express and Angular. }
+	{Web app for performing structural engineering calculations and generating pdf reports. Developed with Express and Angular. }
+	
+	
+	\cventry
+	{\faAndroid\enspace Popular Movies}
+	{}
+	{}
+	{}
+	{}
+	
+	\cventry
+	{\faAndroid\enspace Criminal Intent}
+	{}
+	{}
+	{}
+	{}
+
+	\cventry
+	{\faAndroid\enspace Vue Stock Trader}
+	{}
+	{}
+	{}
+	{}
+	
+	\cventry
+	{\faAndroid\enspace Be Happy}
+	{}
+	{}
+	{}
+	{}
+	
+	\cventry
+	{\faAndroid\enspace Virtual Fence}
+	{}
+	{}
+	{}
+	{}
 	
 	\cventry
 	{\faAndroid\enspace Farm Akamai}
+	{}
+	{}
+	{}
+	{}
+
+	\cventry
+	{\faAndroid\enspace JavaScript Games}
+	{}
+	{}
+	{}
+	{}
+	
+	\cventry
+	{\faAndroid\enspace Sandwich Club}
+	{}
+	{}
+	{}
+	{}
+			
+	\cventry
+	{\faAndroid\enspace Portfolio}
 	{}
 	{}
 	{}
@@ -30,32 +95,64 @@
 	{}
 	{}
 	{}
-	{A single page web application and a cloud-backed mobile app for a fictitious restaurant using Angular.js and Express. Hybrid mobile app was developed using Ionic.}
-
+	{Single page application accompanied by a hybrid mobile app for a fictitious restaurant. Developed with Express, Angular and Ionic.}
+	
 	\cventry
-	{\faLaptop\enspace Coffee in Honolulu
-	}
+	{\faAndroid\enspace Reflex Game}
 	{}
 	{}
 	{}
-	{A map of coffee shops in Honolulu developed using Knockout.js framework and Google Maps and FourSquare APIs.}
-
+	{}
+	
 	\cventry
-	{\faLaptop\enspace Frogger
-	}
+	{\faAndroid\enspace Photo Gallery}
 	{}
 	{}
 	{}
-	{A JavaScript version of the classic arcade game Frogger. Developed with pure vanilla JavaScript.}
-
+	{}
+	
+	\cventry
+	{\faAndroid\enspace Beat Box}
+	{}
+	{}
+	{}
+	{}
+		
+	\cventry
+	{\faAndroid\enspace Nerd Launcher}
+	{}
+	{}
+	{}
+	{}
+		
+	% \cventry
+	% {\faAndroid\enspace Geo Quiz}
+	% {}
+	% {}
+	% {}
+	% {}
+		
+	% \cventry
+	% {\faAndroid\enspace Sunset}
+	% {}
+	% {}
+	% {}
+	% {}
+		
+	% \cventry
+	% {\faLaptop\enspace Coffee in Honolulu}
+	% {}
+	% {}
+	% {}
+	% {A map of coffee shops in Honolulu developed using Knockout.js framework and Google Maps and FourSquare APIs.}
 
 	% \cventry
-	% {Swiss Tournament
+	% {\faLaptop\enspace Frogger
 	% }
-	%{}
-	%{}
 	% {}
-	%{Designed a database and a python script to simulate a Swiss system tournament %\href{https://github.com/tahahojati/SwissTournament}{(github.com/tahahojati/SwissTournament)}.
-	% }
+	% {}
+	% {}
+	% {A JavaScript version of the classic arcade game Frogger. Developed with pure vanilla JavaScript.}
+
 
 \end{cventries}
