main CV is ready for now.

--- a/Main/resume/honors.tex
+++ b/Main/resume/honors.tex
@@ -2,13 +2,13 @@
 %\cvsubsection{International}
 \begin{cvhonors}
 	\cvhonor
-	    {2nd Place}
-	    {Hawaii Agriculture Hackathon (Agathon)}
+		{Hawaii Agriculture Hackathon (Agathon)}
+	    {Second place winner}
 	    {Honolulu, HI}
 	    {2018}  
 	\cvhonor
+		{AT\&T Hackathon (Hawaii)}
 	    {Best IoT Project}
-	    {AT\&T Hackathon (Hawaii)}
 	    {Honolulu, HI}
 	    {2018}
 \end{cvhonors}
