--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -1,15 +1,15 @@
-%some fa icons to use: faAndroid faDesktop faBrowser faLaptop faMicrochip
+%some fa icons to use: faAndroid faDesktop faChrome faLaptop faWrench faTrophy
 \cvsection{Projects}
 
-	Find links and more detailed description of my projects on my online portfolio at \mbox{\href{http:/www.tpourjalali.com}{www.tpourjalali.com}}.
+	Find links and more detailed description of my projects on my online portfolio at \mbox{\href{http://www.tpourjalali.com}{www.tpourjalali.com}}.
 \begin{cventries}
 	
 	\cventry
-	{\faAndroid\enspace Online Developer Portfolio}
+	{\faLaptop\enspace Online Developer Portfolio}
 	{}
 	{}
 	{}
-	{}
+	{My developer pages (at \textbf{\href{http://www.tpourjalali.com}{tpourjalali.com}} and \textbf{\href{https://tahahojati.github.io}{ tahahojati.github.io}}) were developed using Vue.js and Angular.js. }
 	
 	\cventry
 	{\faLaptop \enspace OPIHI: Our Project in Hawaii's Intertidal}
@@ -26,68 +26,69 @@
 	{Web app for performing structural engineering calculations and generating pdf reports. Developed with Express and Angular. }
 	
 	
-	\cventry
-	{\faAndroid\enspace Popular Movies}
-	{}
-	{}
-	{}
-	{}
+	% \cventry
+	% {\faAndroid\enspace Popular Movies}
+	% {}
+	% {}
+	% {}
+	% {}
 	
 	\cventry
 	{\faAndroid\enspace Criminal Intent}
 	{}
 	{}
 	{}
-	{}
+	{Co-workers leaving dirty dishes in the breakroom sink? leaving shared printer without paper? Record their crimes using this app!}
 
-	\cventry
-	{\faAndroid\enspace Vue Stock Trader}
-	{}
-	{}
-	{}
-	{}
+	% \cventry
+	% {\faAndroid\enspace Vue Stock Trader}
+	% {}
+	% {}
+	% {}
+	% {}
+	
+	% \cventry
+	% {\faAndroid\enspace Be Happy}
+	% {}
+	% {}
+	% {}
+	% {}
 	
 	\cventry
-	{\faAndroid\enspace Be Happy}
+	{\faTrophy \faAndroid \faWrench \faCloud \enspace Virtual Fence}
 	{}
 	{}
 	{}
-	{}
+	{Winner of Honolulu AT{\&}T Hackathon 2018. An IoT solution to hinder theft in farms. Technologies used: Particle Photon, Android, Google Cloud.}
 	
 	\cventry
-	{\faAndroid\enspace Virtual Fence}
+	{\faTrophy\faAndroid\enspace Farm Akamai}
 	{}
 	{}
 	{}
-	{}
-	
-	\cventry
-	{\faAndroid\enspace Farm Akamai}
-	{}
-	{}
-	{}
-	{}
+	{Winner in Hawaii Agriculture Hackathon 2018. An Android app to educate ESL immigrants about the standards of farming.}
 
+%virtual pet, farm animals, frogger
 	\cventry
-	{\faAndroid\enspace JavaScript Games}
+	{\faChrome\enspace JavaScript Games}
 	{}
 	{}
 	{}
-	{}
+	{Set of browser games developed with vanilla JavaScript and with Phaser.io. Look for them on my online portflio.}
 	
 	\cventry
 	{\faAndroid\enspace Sandwich Club}
 	{}
 	{}
 	{}
-	{}
+	{An Android app to help you find and prepare Sandwiches}
 			
-	\cventry
-	{\faAndroid\enspace Portfolio}
-	{}
-	{}
-	{}
-	{}
+	% \cventry
+	% {\faAndroid\enspace Portfolio}
+	% {}
+	% {}
+	% {}
+	% {}
 	
 	\cventry
 	{\faAndroid \faLaptop\enspace Ristorante con Fusion
@@ -97,33 +98,33 @@
 	{}
 	{Single page application accompanied by a hybrid mobile app for a fictitious restaurant. Developed with Express, Angular and Ionic.}
 	
-	\cventry
-	{\faAndroid\enspace Reflex Game}
-	{}
-	{}
-	{}
-	{}
+	% \cventry
+	% {\faAndroid\enspace Reflex Game}
+	% {}
+	% {}
+	% {}
+	% {}
 	
 	\cventry
 	{\faAndroid\enspace Photo Gallery}
 	{}
 	{}
 	{}
-	{}
+	{An android client for the photo-sharing site Flickr.}
 	
 	\cventry
 	{\faAndroid\enspace Beat Box}
 	{}
 	{}
 	{}
-	{}
+	{A box for beating up people!(jk) Beat Box is an Android app for generating musical sounds.}
 		
 	\cventry
 	{\faAndroid\enspace Nerd Launcher}
 	{}
 	{}
 	{}
-	{}
+	{A simple app to replace the default Android Launcher (Home screen)}
 		
 	% \cventry
 	% {\faAndroid\enspace Geo Quiz}
