revised some projects

--- a/Main/resume/education.tex
+++ b/Main/resume/education.tex
@@ -15,7 +15,7 @@
 	{Udacity.com}
 	{Honolulu, HI}
 	{2018 (Ongoing)}
-	{I was one of the recipients of the Grow with Google scholarship for Android Development curriculum on Udacity.com. The program will finish later in 2018.}  
+	{I was one of the recipients of the Grow with Google scholarship for Android Development curriculum on Udacity.com.}  
 	\cventry
 	{Certificate in Full Stack Development from the Hong Kong University of Science and Technology}
 	{Coursera.com}
