added Poppin Movies

--- a/Main/resume/projects.tex
+++ b/Main/resume/projects.tex
@@ -26,12 +26,12 @@
 	{Web app for performing structural engineering calculations and generating pdf reports. Developed with Express and Angular. }
 	
 	
-	% \cventry
-	% {\faAndroid\enspace Popular Movies}
-	% {}
-	% {}
-	% {}
-	% {}
+	\cventry
+	{\faAndroid\enspace Poppin' Movies}
+	{}
+	{}
+	{}
+	{Android app that shows you popular movies along with trailers and reviews.  Favorite the ones you like and share with friends! }
 	
 	\cventry
 	{\faAndroid\enspace Criminal Intent}
